# iio_ambient_brightness

./: CLAUDE.md  Cargo.toml  flake.nix
.claude/: settings.local.json
.github/workflows/: cd.yml
src/: kbd_brightness.rs  main.rs  screen_brightness.rs
