[package]
name = "iio_ambient_brightness"
version = "0.2.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
byteorder = "1.5.0"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam = "0.8.4"
ctrlc = "3.5.1"
env_logger = "0.11.3"
industrial-io = { version = "0.6.1", default-features = false, features = ["libiio_v0_24"] }
log = "0.4.28"
logind-zbus = "5.3.2"
mio = { version = "1.1.0", features = ["net", "os-poll"] }
ouroboros = "0.18.5"
retry = "2.1.0"
yata = { version = "0.7.0", default-features = false }
zbus = { version = "5.12.0", default-features = false }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
